--- a/Blog/Views/BlogPosts/Details.cshtml
+++ b/Blog/Views/BlogPosts/Details.cshtml
@@ -1,15 +1,24 @@
-﻿@model Blog.Models.BlogPost
+﻿@model KeyValuePair<Blog.Models.BlogPost, List<Blog.Models.Comment>>
 
 @{
     ViewBag.Title = "Details";
+    Blog.Models.Comment newComment;
 }
 
-<h2>@Html.DisplayFor(model => model.Title)</h2>
-<h3>Posted on @Html.DisplayFor(model => model.PostDate), last update on @Html.DisplayFor(model => model.UpDate).</h3>
+<h2>@Html.DisplayFor(model => model.Key.Title)</h2>
+<h3>Posted on @Html.DisplayFor(model => model.Key.PostDate), last update on @Html.DisplayFor(model => model.Key.UpDate).</h3>
 <p>
-    @MvcHtmlString.Create(Html.Encode(Model.Content).Replace(Environment.NewLine, "<br/>"))
+    @MvcHtmlString.Create(Html.Encode(Model.Key.Content).Replace(Environment.NewLine, "<br/>"))
 </p>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.ID }) |
-    @Html.ActionLink("Delete", "Delete", new { id=Model.ID })
+    @Html.ActionLink("Edit", "Edit", new { id=Model.Key.ID }) |
+    @Html.ActionLink("Delete", "Delete", new { id=Model.Key.ID })
 </p>
+<h3>Comments:</h3>
+@foreach (var item in Model.Value) {
+    <p><strong>@Html.DisplayFor(modelItem => item.Author)</strong><br />
+    <em>Posted on @Html.DisplayFor(modelItem => item.CommentDate).</em>
+    @MvcHtmlString.Create(Html.Encode(item.Content).Replace(Environment.NewLine, "<br/>"))
+        @Html.ActionLink("Delete", "DeleteComment", new { id=item.ID })
+    </p>
+}
